# afd

./: .claude-agent-launch.ps1  .claude-agent-prompt.txt  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  add-note-commands.cjs  biome.json  botcore.toml  commitlint.config.js  create-note-commands.cjs  debug_stderr.txt  execution.review.md  fix-all-imports.cjs  fix-imports.cjs  fix-search-priority.cjs  fix-update-commands.cjs  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmpclaude-8b17-cwd  tools-response.json  tsconfig.json  update-file-store.cjs  update-memory-store.cjs  vitest.config.ts  write-file-store.cjs  write-memory-store.cjs
.changeset/: README.md  config.json  fix-find-up.md
.claude/: CLAUDE.md  mcp.json  settings.local.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  (+3 more)
.personas/: persona.config.yaml
AI UX Design Process Improvment/: AI-Powered Productivity in UX Design.md  AI-UX-Implementation-Guide.md  AI-adoption-and-opporunity-framework.md  AI-adoption-and-opporunity-framework.research.md  Cognitive Impact of AI on UX Designers.md  Diagram.mmd  Emerging AI Technologies in UX Design.md  Evolution of UX Roles in the AI Era.md  Historical Context - AI in Design Evolution.md
Agentic AI UX Design Principles/: 00-Agentic-AI-Principles-Overview.md  01-Agentic-AI-Key-Attributes.md  02-Agentic-AI-UI-Affordances-and-Patterns.md  03-Agentic-AI-Agent-Application-Interaction.md  04-Agentic-AI-Interaction-Styles-and-Communication.md  05-Agentic-AI-Experiences-Beyond-Conversation.md  06-Agentic-AI-Trust-and-Safety.md  07-Agentic-AI-Business-Requirements-and-Prioritization.md  08-Agentic-AI-Evaluation-Methods-and-Metrics.md  09-Agentic-AI-Implementation-Strategy-and-Roadmap.md  announcment.email.md  index.md  ux-for-aai.announcment.md
PLAN/: README.md  handoff-pattern.md
alfred/: AGENTS.md  pyproject.toml
alfred/src/alfred/: __init__.py  cli.py  mcp_server.py  plugin.py
alfred/src/alfred/commands/: __init__.py  lint.py  parity.py  quality.py
alfred/tests/: test_lint.py  test_parity.py  test_quality.py
archive/: afd_example_compliance.plan.md
docs/: README.md  command-schema-guide.md  executive-summary.md  implementation-phases.md  trust-through-validation.md
python/: README.md  pyproject.toml
python/examples/: client_usage.py
python/src/afd/: __init__.py  client.py  direct.py  handoff_client.py  platform.py
python/src/afd/connectors/: __init__.py  github.py  package_manager.py
python/src/afd/core/: __init__.py  batch.py  commands.py  handoff.py  mcp_types.py  pipeline.py  result.py  streaming.py  telemetry.py
python/src/afd/lushx_ext/: __init__.py  linters.py
python/src/afd/server/: __init__.py  decorators.py  factory.py  handoff_schemas.py  middleware.py  validation.py
python/src/afd/server/bootstrap/: __init__.py  afd_docs.py  afd_help.py  afd_schema.py  registry.py
python/src/afd/testing/: __init__.py  assertions.py  cli_wrapper.py  fixtures.py  helpers.py  hints.py  validators.py
python/src/afd/testing/adapters/: __init__.py  generic.py  registry.py  types.py
python/src/afd/testing/commands/: __init__.py  coverage.py  create.py  evaluate.py  list.py  suggest.py
python/src/afd/testing/mcp/: __init__.py  hints.py  server.py  tools.py
python/src/afd/testing/scenarios/: __init__.py  commands.py  coverage.py  evaluator.py  executor.py  parser.py  reporter.py  types.py
python/src/afd/testing/surface/: __init__.py  injection.py  rules.py  schema_complexity.py  similarity.py  types.py  validate.py
python/src/afd/transports/: __init__.py  _mcp_protocol.py  base.py  http.py  sse.py
python/tests/: test_adapter_registry.py  test_adapters.py  test_adapters_generic.py  test_adapters_registry.py  test_agent_hints.py  test_batch.py  test_bootstrap.py  test_cli.py  test_cli_wrapper.py  test_cli_wrapper_execution.py  test_cli_wrapper_types.py  test_client.py  test_commands.py  test_connectors.py  test_connectors_github.py  test_connectors_package_manager.py  test_expose_options.py  test_handoff.py  test_handoff_client.py  test_handoff_schemas.py  test_hints.py  test_hints_core.py  test_hints_reports.py  test_mcp_server.py  test_mcp_server_calls.py  test_mcp_server_tools.py  test_mcp_testing_server.py  test_mcp_types.py  test_middleware.py  test_pipeline.py  test_platform.py  test_result.py  test_scenario_commands.py  test_scenario_coverage_suggest.py  test_scenario_evaluate.py  test_scenario_list_create.py  test_scenarios.py  test_server.py  test_streaming.py  test_surface_analysis.py  (+11 more)
scripts/: check-file-size.mjs  check-orphan-files.mjs  check-portability.mjs  release.mjs
site/: CNAME  index.html  script.js  styles.css
(+605 files in other folders)
